@@ -17,6 +17,6 @@ public class BeanUtilsTest extends TestCase {
 	public void testSetBeanProperty() throws IllegalAccessException, InvocationTargetException, NoSuchMethodException {
 		role.setRoleId(new Long(1));
 		BeanUtils.setProperty(role, "roleId", "2");
-		assertEquals(role.getRoleId(),new Long(2));
+		assertEquals(role.getRoleId(), Long.valueOf(2));
 	}
 }
